Map end Dashboard public

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,6 +5,11 @@ $theme-colors: (
   "primary": $primary,
 );
  */
+
+ body {
+  
+ }
+
 @import 'paper-dashboard/variables';
 
 @import '~bootstrap/scss/bootstrap.scss';
