fix frequency commit

--- a/assets/scss/paper-dashboard/_cards.scss
+++ b/assets/scss/paper-dashboard/_cards.scss
@@ -91,14 +91,13 @@
     }
 
     .big-title {
-      font-size: 12px;
+      font-size: 0.75rem;
       text-align: center;
       font-weight: 500;
       padding-bottom: 15px;
     }
 
     label{
-        font-size: $font-size-small;
         margin-bottom: 5px;
         color: $dark-gray;
     }
