--- a/assets/scss/paper-dashboard/_dropdown.scss
+++ b/assets/scss/paper-dashboard/_dropdown.scss
@@ -445,7 +445,7 @@
                     }
                 }
                 .read-notification{
-                    font-size: 12px;
+                    font-size: 0.75rem;
                     opacity: 0;
                     position: absolute;
                     right: 5px;
