--- a/assets/scss/paper-dashboard/_fixed-plugin.scss
+++ b/assets/scss/paper-dashboard/_fixed-plugin.scss
@@ -149,7 +149,7 @@
     li.header-title{
         height: 30px;
         line-height: 25px;
-        font-size: 12px;
+        font-size: 0.75rem;
         font-weight: 600;
         text-align: center;
         text-transform: uppercase;
