--- a/assets/scss/paper-dashboard/_variables.scss
+++ b/assets/scss/paper-dashboard/_variables.scss
@@ -256,7 +256,7 @@ $bottombar-back:       bottombar-back !default;
 //Nucleo Icons
 
 $nc-font-path:        '../fonts' !default;
-$nc-font-size-base:   14px !default;
+$nc-font-size-base:   0.75rem !default;
 $nc-css-prefix:       nc !default;
 $nc-background-color:     #eee !default;
 $nc-li-width:         calc(30em / 14) !default;
