--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,11 +6,40 @@ $theme-colors: (
 );
  */
 
- body {
-  
- }
+body {
+}
+
+
 
 @import 'paper-dashboard/variables';
+@import 'paper-dashboard/tables';
 
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap-vue/src/index.scss';
+
+.title-shadow {
+  h1,h2,h3,h4,h5,h6 {
+    text-shadow: 2px 2px 5px #ccc !important;
+  } 
+}
+
+
+.border-2 {
+  border-width: 2px !important;
+}
+
+.border-3 {
+  border-width: 3px !important;
+}
+
+.border-4 {
+  border-width: 4px !important;
+}
+
+.card-footer {
+  font-size: 0.719rem
+}
+
+.footer {
+  font-size: 0.75rem
+}
