--- a/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -83,7 +83,7 @@
                 position: relative;
                 text-transform: uppercase;
                 cursor: pointer;
-                font-size: 12px;
+                font-size: 0.75rem;
                 padding: 10px 8px;
                 line-height: 30px;
                 opacity: .7;
